--- a/ihatetomatoes/scrolltrigger-101-2020/index.html
+++ b/ihatetomatoes/scrolltrigger-101-2020/index.html
@@ -61,7 +61,9 @@
       </footer>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
+
   <script src="js/main.js" defer></script>
 
 </body>
